--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+
+.max-datas {
+    width: 20%
+  }
+
+  #page-wrapper {
+    margin: 0 0 0 0px !important;
+  }
+
+  .panel-body span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 100px;
+    font-weight: bold;
+  }
+
+  .navbar-header img {
+    max-height: 50px;
+    width: auto;
+    height: auto;
+    margin: 5px 5px;
+    float: left;
+  }
+
+
+  .navbar-header span {
+    float: left;
+    margin: 15px 10px;
+    font-size: 20px;
+  }
+
+  .client {
+    font-weight: bold;
+  }
