implementação da paginação

--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
   <div class="navbar-header">
-    <img src="../../assets/esender.png"  width="90" height="90"  style="height: 30%;">
-    <span style="color:#666;font-size: 20px;font-family: Arial, Helvetica, sans-serif">Resumo de Operações (Período: 02-05-19 a 02-05-19) </span>
+    <img src="../../assets/esender.png" width="90" height="90" style="height: 30%;">
+    <span style="color:#666;font-size: 20px;font-family: Arial, Helvetica, sans-serif">Resumo de Operações (Período:
+      02-05-19 a 02-05-19) </span>
     <span class="client" style="color:#666;font-size: 20px;font-family: Arial, Helvetica, sans-serif">Programare</span>
-    <span class="client" ><a style="color:#3bb5a8;" href="http://win-vs-esender:5000/esender">Índice</a></span>
+    <span class="client"><a style="color:#3bb5a8;" href="http://win-vs-esender:5000/esender">Índice</a></span>
   </div>
 </nav>
 
@@ -53,7 +54,8 @@
             Fila de Envio
           </div>
           <div class="panel-body">
-            <span style="color:#666;font-weight: 700; font-size: 100px;font-family: Arial, Helvetica, sans-serif">0</span>
+            <span
+              style="color:#666;font-weight: 700; font-size: 100px;font-family: Arial, Helvetica, sans-serif">0</span>
           </div>
         </div>
       </div>
@@ -62,7 +64,7 @@
 
   <div class="container-fluid">
     <form action="http://win-vs-esender:5000/esender/ResumoWeb/Resultado" method="get">
-      <div class="form-group">
+      <div class="form-group" style="margin-bottom:24px">
         <!-- Date input -->
         <label class="control-label" for="date_inicio">Data de Início</label>
         <input class="form-control, max-datas" id="date_inicio" name="dtInicio" placeholder="DD/MM/YYYY" type="date"
@@ -75,7 +77,12 @@
         <!-- Submit button -->
         <button style="margin-left:6px" class="btn btn-success " name="submit" type="submit">Atualizar</button>
       </div>
-
+      <div align="center" style="margin-bottom:24px">
+        <pagination-controls (pageChange)="p = $event" responsive="true"   
+                              previousLabel="Anterior"
+                              nextLabel="Próximo"
+        ></pagination-controls>
+      </div>
     </form>
   </div>
   <div id="resumo" class="container-fluid">
@@ -83,55 +90,57 @@
       <div class="container-fluid">
         <div class="col-12 col-sm-12  col-lg-10">
           <div class=" table-responsive ">
-            <table *ngFor="let ocorrencia of listaLotes" class="table table-bordered" style="background: #eee">
+            <table *ngFor="let ocorrencia of listaLotes | paginate: { itemsPerPage: 10, currentPage: p }"
+              class="table table-bordered" style="background: #eee">
 
               <!--<tr *ngFor="let ocorrencia of listaLotes">-->
-                <caption class="fonte-table" style="background: #eee;border: 1px solid #999999; padding: 3px 10px">CNPJ:
-                  {{ocorrencia.cnpj}}</caption>
+              <caption class="fonte-table" style="background: #eee;border: 1px solid #999999; padding: 3px 10px">CNPJ:
+                {{ocorrencia.cnpj}}</caption>
 
-                <thead>
-                  <tr>
-                    <th style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Lote</th>
-                    <th style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Arq. Original</th>
-                    <th style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Evento autorizado
-                    </th>
-                    <th style="font-size: 15px;font-weight: bold;border: 1px solid #999999">XML Retorno</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999"> {{ocorrencia.lote}}</td>
-                    <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">
-                      {{ocorrencia.caminhoArq}}</td>
-                    <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">
-                      {{ocorrencia.eventoAutorizado}}</td>
-                    <td style="font-size: 15px;;background: #f8f8f8;border: 1px solid #999999">
-                      <a target="_blank" href="{{ocorrencia.href}}" download="{{ocorrencia.download}}">Arq.Retorno</a></td>
-                  </tr>
+              <thead>
+                <tr>
+                  <th style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Lote</th>
+                  <th style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Arq. Original</th>
+                  <th style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Evento autorizado
+                  </th>
+                  <th style="font-size: 15px;font-weight: bold;border: 1px solid #999999">XML Retorno</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999"> {{ocorrencia.lote}}</td>
+                  <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">
+                    {{ocorrencia.caminhoArq}}</td>
+                  <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">
+                    {{ocorrencia.eventoAutorizado}}</td>
+                  <td style="font-size: 15px;;background: #f8f8f8;border: 1px solid #999999">
+                    <a target="_blank" href="{{ocorrencia.href}}" download="{{ocorrencia.download}}">Arq.Retorno</a>
+                  </td>
+                </tr>
 
-                </tbody>
+              </tbody>
 
 
-                <thead>
-                  <tr>
-                    <th scope="col" style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Codigo</th>
-                    <th scope="col" style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Mensagem</th>
-                    <th scope="col" style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Gravidade</th>
-                    <th style="background:  #f8f8f8;border: 1px solid #f8f8f8;"></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">{{ocorrencia.codigoErro}}
-                    </td>
-                    <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">{{ocorrencia.mensagemErro}}
-                    </td>
-                    <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">{{ocorrencia.gravidade}}
-                    </td>
-                    <td style="background: #f8f8f8;border: 1px solid #f8f8f8;"></td>
-                  </tr>
-                </tbody>
-            <!--      </tr>
+              <thead>
+                <tr>
+                  <th scope="col" style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Codigo</th>
+                  <th scope="col" style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Mensagem</th>
+                  <th scope="col" style="font-size: 15px;font-weight: bold;border: 1px solid #999999">Gravidade</th>
+                  <th style="background:  #f8f8f8;border: 1px solid #f8f8f8;"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">{{ocorrencia.codigoErro}}
+                  </td>
+                  <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">{{ocorrencia.mensagemErro}}
+                  </td>
+                  <td style="font-size: 15px;background: #f8f8f8;border: 1px solid #999999">{{ocorrencia.gravidade}}
+                  </td>
+                  <td style="background: #f8f8f8;border: 1px solid #f8f8f8;"></td>
+                </tr>
+              </tbody>
+              <!--      </tr>
            
           <thead>
             <tr>
